==========
PolicyKit 0.7 "Common sense ain't common"
==========

Released on December 5th 2007.

This is the fifth release of PolicyKit. This release is mostly ABI and
API compatible with 0.6 (100% compatible for existing mechanisms). The
authorization backend has changed; authorizations gained from earlier
PolicyKit releases are no longer valid and will be ignored.

Highlights of this release:

 o  All code is now licensed under the MIT/X11 license

 o  libpolkit and libpolkit-dbus no longer depends on libglib.

 o  Unit test framework and coverage reporting. As of this release, 64%
    of the codebase is currently tested during 'make check'.

 o  New system D-Bus service (activated on demand) providing the major
    functionality of libpolkit.so from a mechanism point of view. This
    is useful for chroot(2)'ed services like Avahi.

 o  A class for tracking D-Bus connections to minimize the amount
    of IPC necessary. Useful for long running daemons.

 o  Pluggable authorization database backend.

 o  New API for interacting with the authorization database

 o  A very simple convenience API useful for (legacy) commandline tools.

 o  A way to specify that an implicit authorization can be one-shot
    only.

 o  Vendor name, site and icon support in .policy files.

 o  Improved documentation.

 o  Negative authorizations.

 o  Bash completions for all command line tools.

Changes from PolicyKit 0.6 "There is no stopping in a red zone"

David Zeuthen (126):
      add the convenience class PolKitTracker
      add id's so the generated HTML has stable and predictable file names
      post-release version bump
      add support to PolKitTracker for also asking on pid
      add C++ include guards and a new method to get pfe's by annotation
      avoid including regex.h from a public header file
      don't spew debug output in libpolkit-dbus
      work on the docs
      use the Since: tag so gtk-doc can print what symbols are new in 0.7